@@ -117,7 +117,6 @@ has dbh => (
                     return;
                 },
             },
-            $uri->query_params,
         });
     }
 );
