@@ -120,7 +120,6 @@ has dbh => (
                     return;
                 },
             },
-            $uri->query_params,
         });
     }
 );
