@@ -37,6 +37,8 @@ Revision history for Perl extension App::Sqitch
        if a password is provided in a target. This should simplify
        authtentication when running Firebird change scripts through the `isql`
        client client. Patch from Ștefan Suciu.
+     - No longer passing URI query params as DBI params, because they are
+       already included in the DSN provided by URI::db.
 
 0.995  2014-07-13T22:24:53Z
      - Fixed test failures due to the introduction of "Negative repeat count
